<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/navigation_item_my">
            <menu>
                <item
                    android:id="@+id/navigation_item_personal"
                    android:icon="@mipmap/account_circle_white_36x36"
                    android:title="@string/navigation_item_personal"/>
                <item
                    android:id="@+id/navigation_item_collection"
                    android:icon="@mipmap/class_white_36x36"
                    android:title="@string/navigation_item_my_collection"/>
                <item
                    android:id="@+id/navigation_item_letter"
                    android:icon="@mipmap/supervisor_account_white_36x36"
                    android:title="@string/navigation_item_letter"/>
            </menu>

        </item>
        <item
            android:id="@+id/navigation_item_common"
            android:icon="@mipmap/whatshot_white_36x36"
            android:title="@string/navigation_item_common"/>
        <item
            android:id="@+id/navigation_item_setting"
            android:icon="@mipmap/settings_white_36x36"
            android:title="@string/navigation_item_setting"/>

        <item
            android:id="@+id/navigation_item_about"
            android:icon="@mipmap/error_outline_white_36x36"
            android:title="@string/navigation_item_about"/>
    </group>
</menu>